# weather_reader

./: .gitignore  Dockerfile  crontab.txt  pyproject.toml
postgres_db/: create_tables.py  db_local_api.py
weather_reader/: cities.json  common.py  config.py  cron_executor.py  download_async.py  download_common.py  download_concur.py  download_seq.py  get_city_lat_long.py  logging_config.py  main.py  validate_reading.py
