[tool.poetry]
name = "weather-reader"
version = "0.1.0"
description = ""
authors = ["Brian Farish <brian.farish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.25.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
