[tool.poetry]
name = "weather-reader"
version = "0.1.0"
description = ""
authors = ["Brian Farish <brian.farish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
httpx = "^0.25.0"
asyncio = "^3.4.3"
python-dotenv = "^1.0.0"
black = "^23.9.1"
pyarrow = "^13.0.0"
pandas = "^2.1.1"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
