[tool.poetry]
name = "weather-reader"
version = "0.1.0"
description = ""
authors = ["Brian Farish <brian.farish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
httpx = "^0.25.0"
asyncio = "^3.4.3"
python-dotenv = "^1.0.0"
black = "^23.9.1"
pyarrow = "^13.0.0"
pandas = "^2.1.1"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.22"
psycopg2 = "^2.9.9"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
